# CPUSchdUI

./: .gitignore  Package.swift  README.md
CPUSchedulerUI/: CPUSchedulerUIApp.swift
CPUSchedulerUI.xcodeproj/: project.pbxproj
CPUSchedulerUI/Models/: AppColors.swift  Process.swift
CPUSchedulerUI/Services/: PreferencesService.swift
CPUSchedulerUI/ViewModels/: ComparisonViewModel.swift  MonitorViewModel.swift  SimulatorViewModel.swift  TutorialViewModel.swift
CPUSchedulerUI/Views/: MainWindowView.swift
CPUSchedulerUI/Views/Comparison/: ComparisonView.swift
CPUSchedulerUI/Views/Components/: GlassCard.swift  LoadingSpinner.swift
CPUSchedulerUI/Views/Education/: EducationView.swift
CPUSchedulerUI/Views/Monitor/: SystemMonitorView.swift
CPUSchedulerUI/Views/Settings/: SettingsView.swift
CPUSchedulerUI/Views/Simulator/: ScenarioPickerSheet.swift  SimulatorView.swift
CPUSchedulerUI/Views/Visualization/: GanttChartView.swift
native-app/app/: Package.swift  README.md
native-app/app/CPUSchedulerUI/: CPUSchedulerUI-Bridging-Header.h  CPUSchedulerUIApp.swift
native-app/app/CPUSchedulerUI.xcodeproj/: project.pbxproj
native-app/backend/: CMakeLists.txt
native-app/backend/Examples/: standalone_demo.c
native-app/backend/Sources/Bridge/: ProcessMonitorBridge.h  ProcessMonitorBridge.mm  SchedulerBridge.h  SchedulerBridge.mm  TypeConverters.mm
native-app/backend/Sources/Core/: metrics.c  metrics.h  process_monitor.c  process_monitor.h  process_types.h  scheduler.c  scheduler.h  utils.c  utils.h
native-app/backend/Sources/Include/: CPUSchedulerBackend.h
native-app/backend/Tests/: test_metrics.c  test_monitor.c  test_scheduler.c
web-app/: .eslintrc.json  .gitignore  README.md  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
web-app/.vercel/: project.json
web-app/public/: sitemap.xml
web-app/src/: App.jsx  index.css  main.jsx
web-app/src/algorithms/: fcfs.js  index.js  priority.js  priorityPreemptive.js  roundRobin.js  sjf.js  srtf.js
web-app/src/contexts/: ThemeContext.jsx
web-app/src/data/: algorithmExplanations.js  presets.js
(+60 files in other folders)
